--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@uiw/react-md-editor": "^3.23.6",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "jwt-decode": "^4.0.0",
     "next": "13.4.19",
     "next-remove-imports": "^1.0.12",
     "node-sass": "^9.0.0",
     "react": "18.2.0",
+    "react-cookie": "^6.1.1",
     "react-dom": "18.2.0",
     "react-query": "^3.39.3",
     "react-responsive": "^9.0.2",
